6.kubernetes/k8s-basic/ingress-lesson/host-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    # cert-manager.io/cluster-issuer: "letsencrypt-staging"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingressClassName: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: "nginx"
  tls: 
    - hosts: 
      - k8s-nginx-demo-prod.tochratana.com
      - simplestore-app.tochratana.com
      secretName: nginx-k8s-tls
  rules:
  - host: k8s-nginx-demo-prod.tochratana.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-svc
            port: 
              number: 80
  - host: simplestore-app.tochratana.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simplestore-svc
            port: 
              number: 80
